--- a/index.html
+++ b/index.html
@@ -8,18 +8,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:opsz,wght@16..144,100..700&display=swap" rel="stylesheet">
-    <title>IHM Déma't : Les IHM dans votre poche</title>
+    <title>IHM Déma't - Aéromax Split 3</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">Accueil</a>
-            <button>Aide</button>
-        </nav>
-        <h1>IHM Déma't</h1>
-    </header>
-    <main>
-        <a href="./aeromax-split-3.html">Aéromax Split 3</a>
-    </main>
+  <header>
+    <h1>Aéromax Split 3</h1>
+    <button>Aide</button>
+  </header>
+  <main>
+    <section class="discover">
+      <div class="display">
+        <h2>Menu</h2>
+        <ul class="menu-list">
+          <li>menu 1</li>
+          <li>menu 2</li>
+          <li>menu 3</li>
+          <li>menu 4</li>
+          <li>menu 5</li>
+          <li>menu 6</li>
+        </ul>
+      </div>
+      <div class="keyboard">
+        <button class="btn btn-up">⬆️</button>
+        <button class="btn btn-back">↩️</button>
+        <button class="btn btn-ok">ok</button>
+        <button class="btn btn-menu">☰</button>
+        <button class="btn btn-down">⬇️</button>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
