Ajout des fichiers SVG et avancement du css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
   <header>
     <h1>Aéromax Split 3</h1>
-    <button>Aide</button>
   </header>
   <main>
     <section class="discover">
@@ -29,11 +28,19 @@
         </ul>
       </div>
       <div class="keyboard">
-        <button class="btn btn-up">⬆️</button>
-        <button class="btn btn-back">↩️</button>
+        <button class="btn btn-up" aria-label="Bouton flèche vers le haut">
+          <img src="./Ressources/arrow-top.svg" alt="">
+        </button>
+        <button class="btn btn-back" aria-label="Bouton flèche vers le haut">
+          <img src="./Ressources/back.svg" alt="">
+        </button>
         <button class="btn btn-ok">ok</button>
-        <button class="btn btn-menu">☰</button>
-        <button class="btn btn-down">⬇️</button>
+        <button class="btn btn-menu">
+          <img src="./Ressources/burger-menu.svg" alt="">
+        </button>
+        <button class="btn btn-down">
+          <img src="./Ressources/arrow-bottom.svg" alt="">
+        </button>
       </div>
     </section>
   </main>
