--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <main>
     <section class="discover">
       <div class="display">
-        <h2>Menu</h2>
+        <h2 class="menu-title">Historique Erreurs</h2>
         <ul class="menu-list">
-          <li>menu 1</li>
-          <li>menu 2</li>
-          <li>menu 3</li>
-          <li>menu 4</li>
-          <li>menu 5</li>
-          <li>menu 6</li>
+          <li class="menu-element">Anti-légionelle</li>
+          <li class="menu-element">Pilotage Externe</li>
+          <li class="menu-element selected">Diagnostique</li>
+          <li class="menu-element">Mode Secours</li>
+          <li class="menu-element">Version Logiciel</li>
+          <li class="menu-element">Historique Erreurs</li>
         </ul>
       </div>
       <div class="keyboard">
