add responsive css

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <li class="menu-element">Version Logiciel</li>
           <li class="menu-element">Historique Erreurs</li>
         </ul>
+        <!-- <img src="./Ressources/water-drop.svg" alt="Groutte d'eau" class="water-drop"> -->
       </div>
       <div class="keyboard">
         <button class="btn btn-up" aria-label="Bouton flèche vers le haut">
@@ -44,5 +45,6 @@
       </div>
     </section>
   </main>
+  <script src="script.js"></script>
 </body>
 </html>
