add first lines js

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
   <main>
     <section class="discover">
       <div class="display">
-        <h2 class="menu-title">Historique Erreurs</h2>
+        <h2 class="home-title">Ven 11:23</h2>
+        <img src="./Ressources/water-drop.svg" alt="Groutte d'eau" class="water-drop">
+      
+        <!-- <h2 class="menu-title">Historique Erreurs</h2>
         <ul class="menu-list">
           <li class="menu-element">Anti-légionelle</li>
           <li class="menu-element">Pilotage Externe</li>
-          <li class="menu-element selected">Diagnostique</li>
-          <li class="menu-element">Mode Secours</li>
+          <li class="menu-element">Diagnostique</li>
+          <li class="menu-element">Mode pac hs 2</li>
           <li class="menu-element">Version Logiciel</li>
           <li class="menu-element">Historique Erreurs</li>
-        </ul>
-        <!-- <img src="./Ressources/water-drop.svg" alt="Groutte d'eau" class="water-drop"> -->
+        </ul> -->
       </div>
       <div class="keyboard">
         <button class="btn btn-up" aria-label="Bouton flèche vers le haut">
