--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <main>
     <section class="discover">
       <div class="display">
+        <h3 class="functionality-title">QR Code</h3>
+        <img src="./Ressources/qr-code-connectivity.svg" alt="QR Code à scanner pour effectuer l'appairage">
+        <p class="functionality-text">Code PIN</p>
         
         <!-- <h2 class="home-title">Ven 11:23</h2>
         <img src="./Ressources/water-drop.svg" alt="Groutte d'eau" class="water-drop"> -->
@@ -34,6 +37,10 @@
           <div class="menu-item">Item 5</div>
         </div>
          -->
+
+
+
+
       </div>
       <div class="keyboard">
         <button class="btn btn-up" aria-label="Bouton flèche vers le haut">
@@ -52,6 +59,6 @@
       </div>
     </section>
   </main>
-  <script type="module" src="script.js"></script>
+  <!-- <script type="module" src="script.js"></script> -->
 </body>
 </html>
