Add functionnality style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="discover">
       <div class="display">
         <h3 class="functionality-title">QR Code</h3>
-        <img src="./Ressources/qr-code-connectivity.svg" alt="QR Code à scanner pour effectuer l'appairage">
+        <img src="./Ressources/qr-code-connectivity.svg" alt="QR Code à scanner pour effectuer l'appairage" class="functionality-img">
         <p class="functionality-text">Code PIN</p>
         
         <!-- <h2 class="home-title">Ven 11:23</h2>
@@ -59,6 +59,6 @@
       </div>
     </section>
   </main>
-  <!-- <script type="module" src="script.js"></script> -->
+  <script type="module" src="script.js"></script>
 </body>
 </html>
